--- a/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Practica 1.lyx
+++ b/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Practica 1.lyx
@@ -1980,6 +1980,27 @@ Argumento:
 \end_layout
 
 \begin_layout Itemize
+\begin_inset Formula $\forall x\left(Gato\left(x\right)\to Mascota\left(x\right)\right)$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\forall x\left(Perro\left(x\right)\to Mascota\left(x\right)\right)$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\forall x\left(Mascota\left(x\right)\to Animal\left(x\right)\right)$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
 \begin_inset Formula $Gato\left(Iris\right)$
 \end_inset
 
